test/compile-errors/extern-ptr-is-mut.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: [
		struct(range(0, 14), "", public, [], none, extern-ptr)
		struct(
			range(14, 28)
			""
			public
			[]
			none
			record(none, [field(range(24, 27), const, a, inststruct(range(26, 27), name-range(26, a)))]))]
	funs: [])
